# blnav

Android/: MVVM_ARCHITECTURE.md  PERMISSION_MANAGEMENT_BEST_PRACTICES.md  settings.gradle.kts  集成说明.md
Android/app/: build.gradle.kts
Android/app/src/androidTest/java/com/powercess/blnav/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/powercess/blnav/: BluetoothPermissionManager.kt  MainActivity.kt
Android/app/src/main/java/com/powercess/blnav/common/constants/: AppConstants.kt
Android/app/src/main/java/com/powercess/blnav/common/logger/: AppLogger.kt
Android/app/src/main/java/com/powercess/blnav/common/permission/: GlobalPermissionManager.kt  PermissionConfig.kt  PermissionConfigs.kt
Android/app/src/main/java/com/powercess/blnav/data/model/: BluetoothDeviceModel.kt  (+1 more)
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/test/java/com/powercess/blnav/: ExampleUnitTest.kt
Android/gradle/: libs.versions.toml
Android/gradle/wrapper/: gradle-wrapper.properties
Server/: Cargo.toml
Server/src/: config.rs  error.rs  lib.rs  main.rs
Server/src/api/: dto.rs  mod.rs
Server/src/api/handlers/: beacon_handlers.rs  health_handlers.rs  mod.rs
Server/src/api/routes/: beacons.rs  health.rs  mod.rs
Server/src/domain/: beacon.rs  location.rs  mod.rs
Server/src/infrastructure/: mod.rs  state.rs
Server/src/infrastructure/repository/: beacon_repository.rs  mod.rs
Server/src/network/: handlers.rs  mod.rs  request.rs  response.rs  server.rs
Server/tests/: network_integration_test.rs
(+28 files in other folders)
